Endpoint to selectively update cluster timestamps
