# server/src/main/resources/openapi/reservoir.yaml
@@ -704,6 +704,29 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  /reservoir/clusters/touch:
+    post:
+      parameters:
+        - $ref: headers/okapi-tenant.yaml
+        - $ref: headers/okapi-token.yaml
+        - $ref: headers/okapi-url.yaml
+        - $ref: parameters/query.yaml
+      description: Update cluster timestamps. CQL must specify at least matchkeyId and sourceId,
+        sourceVersion and clusterId are optional.
+      operationId: touchClusters
+      responses:
+        "200":
+          description: clusters timestamp updated
+          content:
+            application/json:
+              schema:
+                $ref: schemas/count.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
   /reservoir/clusters/{clusterId}:
     parameters:
       - $ref: headers/okapi-tenant.yaml
